1. Dodane logo 2. Dodane logowanie 3. Dodane monitorowania połączenia z Internetem 4. Zmieniona klasa użytkownika 5. Zmieniony lekko interfejs logowania

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.oxbow.netbow">
 <uses-permission android:name="android.permission.INTERNET"/>
     <application
@@ -20,6 +21,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"/>
+        <receiver
+            android:name=".ConnectivityReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"
+                    tools:ignore="BatteryLife" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
