--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:label=""
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -35,8 +35,7 @@
 
         <activity
             android:name=".SerieDetails"
-            android:label="@string/title_activity_serie_details"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
