--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label=""
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -36,6 +36,9 @@
         <activity
             android:name=".SerieDetails"
             android:theme="@style/AppTheme" />
+        <activity android:name=".WelcomePage"
+            android:theme="@style/Theme.Transparent"
+            />
     </application>
 
 </manifest>
